welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:29: error: Invalid literal number
def mono2(){for (r<- 1to 9){col2();for (u<- 1 to 5){avance()}}}  
                     ^PictureMono3:29: error: ')' expected but '}' found.
def mono2(){for (r<- 1to 9){col2();for (u<- 1 to 5){avance()}}}  
                                                              ^